--- a/src/main/resources/static/css/MainPage.css
+++ b/src/main/resources/static/css/MainPage.css
@@ -6,28 +6,15 @@
     box-sizing: border-box; /* Include padding and border in element's total width and height */
 }
 
-.main-container{
-	margin: 0px auto;
-	display: flex;
-	border: 3px black solid;
-	width: 1200px;
-	height: 100dvh;
-	justify-content: space-between;
-}
-
 .left-column{
 	width: 300px;
-	border: 2px black solid;
-	justify-content: space-around;
-	display: flex;
-	flex-direction: column;
-	align-items: start;
+	border-right: 2px rgb(192, 188, 188) solid;
 	padding-left: 30px;
+	padding-right: 20px;
 }
 
 .icons-text{
 	display: flex;
-	/*border: 1px red solid;*/
 	width: auto;
 	border-radius: 20px;
 	align-items: center;
@@ -59,30 +46,16 @@
     font-size: 24px;
 }*/
 
-.user-column{
-	height: 200px;
-	display: flex;
-	flex-direction: column;
-	border: rgb(224, 224, 224) 4px solid;
-	justify-content: end;
-}
-
 .icons-text a {
     color: inherit; /* Preserve the color inherited from the parent */
     text-decoration: none; /* Remove underline */
-    display: flex;
 }
 
 /*Moving forward, all styling is dedicated to the central div.*/
 /*__________________________________________________________________________________________*/
 .central-column{
-	flex-grow: 1;
-	border: 2px rgb(255, 128, 0) solid;
-	justify-content: space-around;
-	display: flex;
-	flex-direction: column;
-	align-items: start;
-	padding-left: 30px;
+	padding:30px;
+	border-right: 2px rgb(192, 188, 188) solid;
 }
 
 
@@ -93,13 +66,14 @@
 /*Moving forward, all styling is dedicated to the rigrh column.*/
 /*__________________________________________________________________________________________*/
 .right-column{
-	width: 300px;
+	/*width: 300px;
 	border: 2px black solid;
 	justify-content: space-around;
 	display: flex;
 	flex-direction: column;
 	align-items: start;
-	padding-left: 30px;
+	padding-left: 30px;*/
+	padding: 30px;
 }
 
 
