--- a/src/main/resources/static/css/MainPage.css
+++ b/src/main/resources/static/css/MainPage.css
@@ -6,6 +6,16 @@
     box-sizing: border-box; /* Include padding and border in element's total width and height */
 }
 
+a {
+	text-decoration: none;
+}
+
+.errors {
+	font-size: .875em;
+	margin-top: 0.25em;
+	color: #e60553;
+}
+
 .left-column{
 	width: 300px;
 	border-right: 2px rgb(192, 188, 188) solid;
@@ -38,13 +48,6 @@
     font-size: 24px; 
     margin-right: 10px;; }
     
-/*.icons-text a {
-    width:100%;
-    border-radius: 30px;
-    color: white;
-    font-weight:bold;
-    font-size: 24px;
-}*/
 
 .icons-text a {
     color: inherit; /* Preserve the color inherited from the parent */
@@ -54,28 +57,15 @@
 /*Moving forward, all styling is dedicated to the central div.*/
 /*__________________________________________________________________________________________*/
 .central-column{
-	padding:30px;
+	padding:20px;
 	border-right: 2px rgb(192, 188, 188) solid;
 }
-
-
-
 
 
 
 /*Moving forward, all styling is dedicated to the rigrh column.*/
 /*__________________________________________________________________________________________*/
 .right-column{
-	/*width: 300px;
-	border: 2px black solid;
-	justify-content: space-around;
-	display: flex;
-	flex-direction: column;
-	align-items: start;
-	padding-left: 30px;*/
 	padding: 30px;
 }
-
-
-
 
