--- a/src/main/resources/static/css/MainPage.css
+++ b/src/main/resources/static/css/MainPage.css
@@ -69,3 +69,12 @@ a {
 	padding: 30px;
 }
 
+
+.shadow-top{
+	-webkit-box-shadow: 0px -8px 26px 0px rgba(204, 200, 235, 1);
+	-moz-box-shadow: 0px -8px 26px 0px rgba(204, 200, 235, 1);
+	box-shadow: 0px -8px 26px 0px rgba(204, 200, 235, 1);
+}
+.text-2xl{
+	font-size: 12em;
+}
